[package]
name = "pow2"
version = "0.1.0"
authors = ["Arlie Davis <ardavis@microsoft.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Represents a non-negative power of 2, by storing its exponent."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerocopy = { version = "0.3.0", optional = true }
zerocopy-derive = { version = "0.2.0", optional = true }

[features]
default = []
