[package]
name = "pow2"
version = "0.1.0"
authors = ["Arlie Davis <ardavis@microsoft.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Represents a non-negative power of 2, by storing its exponent."
repository = "https://github.com/sivadeilra/pow2"

[dependencies]
zerocopy = { version = "0.7.3", optional = true }
zerocopy-derive = { version = "0.7.3", optional = true }

[features]
default = []
