[package]
name = "pow2"
version = "0.1.1"
authors = ["Arlie Davis <ardavis@microsoft.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Represents a non-negative power of 2, by storing its exponent."
repository = "https://github.com/sivadeilra/pow2"

[dependencies]
zerocopy = "0.7.3"
zerocopy-derive = "0.7.3"
